<resources>
    <string name="app_name">DemoApiService</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toolbar_name">Toolbar Name</string>
    <string name="how_to">How To</string>
    <string name="server_error">Server Error</string>
    <string name="retry">Retry</string>
    <string name="network_error">Network Error\n</string>
    <string name="button">Button</string>
    <string name="faq">FAQ</string>
    <string name="title">Title</string>
    <string name="description">description</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="company_name">Company Name</string>
    <string name="address">Address</string>
    <string name="area">Area</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="agree_terms">Agree terms</string>
</resources>