<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">

    <TextView
        android:id="@+id/tv_register_txt"
        style="@style/extraLargeTextBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="start"
        android:text="@string/register"
        android:textColor="@color/light_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_txt">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:paddingVertical="@dimen/_15sdp">

            <EditText
                android:id="@+id/et_name"
                style="@style/normalTextMedium"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/square_white_line"
                android:gravity="center_vertical"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:paddingHorizontal="@dimen/_15sdp"
                android:singleLine="true"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_email"
                style="@style/normalTextMedium"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/square_white_line"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="@dimen/_15sdp"
                android:singleLine="true"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_name" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/csl_sp_branch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/square_white_line"
                android:minHeight="@dimen/_40sdp"
                android:paddingHorizontal="@dimen/_15sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_email">


                <Spinner
                    android:id="@+id/sp_branch"
                    style="@style/toolbarTextBold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/iv_arrow_2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_arrow_2"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    style="@style/actionBarItemBackground"
                    android:contentDescription="@string/email"
                    android:padding="@dimen/_7sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_drop_down" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ll_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/square_white_line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/csl_sp_branch">

                <TextView
                    android:id="@+id/tvCountryCode"
                    style="@style/normalTextMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginStart="@dimen/_10sdp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/et_phone"
                    style="@style/normalTextMedium"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:background="@android:color/transparent"
                    android:digits="0123456789"
                    android:gravity="center_vertical"
                    android:imeOptions="actionNext"
                    android:inputType="phone|textNoSuggestions"
                    android:singleLine="true"
                    android:tag=""
                    android:maxLength="10"
                    android:textColorHint="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvCountryCode"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/et_company_name"
                style="@style/normalTextMedium"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/square_white_line"
                android:gravity="center_vertical"
                android:hint="@string/company_name"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:paddingHorizontal="@dimen/_15sdp"
                android:singleLine="true"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_phone" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/csl_sp_emirates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/square_white_line"
                android:minHeight="@dimen/_40sdp"
                android:visibility="gone"
                android:paddingHorizontal="@dimen/_15sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_company_name">


                <Spinner
                    android:id="@+id/sp_emirates"
                    style="@style/toolbarTextBold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/iv_arrow_1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_arrow_1"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    style="@style/actionBarItemBackground"
                    android:contentDescription="@string/email"
                    android:padding="@dimen/_7sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_drop_down" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <EditText
                android:id="@+id/et_address"
                style="@style/normalTextMedium"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/square_white_line"
                android:gravity="center_vertical"
                android:hint="@string/address"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:paddingHorizontal="@dimen/_15sdp"
                android:singleLine="true"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/csl_sp_emirates" />

            <EditText
                android:id="@+id/et_area"
                style="@style/normalTextMedium"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/square_white_line"
                android:gravity="center_vertical"
                android:hint="@string/area"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:paddingHorizontal="@dimen/_15sdp"
                android:singleLine="true"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_address" />

            <EditText
                android:id="@+id/et_password"
                style="@style/normalTextMedium"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/square_white_line"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/_15sdp"
                android:singleLine="true"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_area" />

            <EditText
                android:id="@+id/et_confirm_password"
                style="@style/normalTextMedium"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/square_white_line"
                android:gravity="center_vertical"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/_15sdp"
                android:singleLine="true"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_password" />

            <LinearLayout
                android:id="@+id/ll_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_confirm_password">

                <ImageView
                    android:id="@+id/iv_agree_terms"
                    style="@style/SelectableItemBackground"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:contentDescription="@string/password"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_un_tick"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_terms"
                    style="@style/smallTextMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/_5sdp"
                    android:text="@string/agree_terms" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_register"
                style="@style/toolbarTextMedium"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:background="@drawable/square_corner_bg"
                android:gravity="center"
                android:text="@string/register"
                android:alpha=".4"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_terms" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/include_progress"
        layout="@layout/layout_progress_bar"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>